# BoAT-X-Framework

./: .gitignore  .tags  .tags_sorted_by_file  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  README_cn.md  SUPPORTED_LIST.md  build.sh  external.env
demo/: ._README.md  CMakeLists.txt  Makefile  README.md  README_en.md  demo_ethereum.c  demo_ethereum_storeread.c  demo_ethereum_transfer.c  demo_fabric_invoke.c  demo_fiscobcos_helloworld.c  demo_platone.c  demo_platone_mycontract.c  main.c
demo/demo_chainmaker/: CMakeLists.txt  Makefile  demo_chainmaker.c  demo_chainmaker_wx-org1.c
demo/demo_chainmaker_v1/: CMakeLists.txt  Makefile  demo_chainmaker.c
demo/demo_chainmaker_v2/: Makefile  demo_chainmaker.c
demo/demo_cita/: CMakeLists.txt  Makefile  demo_cita_SimpleStorage.c
demo/demo_cita/demo_contract/: CMakeList.txt  CMakeLists.txt  Makefile  SimpleStorage.json  SimpleStorage.sol
demo/demo_ethereum/: CMakeLists.txt  Makefile  demo_ethereum_storeread.c  demo_ethereum_transfer.c
demo/demo_ethereum/demo_contract/: CMakeLists.txt  Makefile  StoreRead.json  StoreRead.sol  TestABIContract.c  TestABIContract.h  TestABIContract.json  TestABIContract.sol
demo/demo_fabric/: CMakeLists.txt  Makefile  demo_fabric_abac.c  demo_fabric_invoke.c
demo/demo_fiscobcos/: CMakeLists.txt  Makefile  demo_fiscobcos_helloworld.c
demo/demo_fiscobcos/demo_contract/: CMakeLists.txt  HelloWorld.json  HelloWorld.sol  Makefile
demo/demo_huawei/: CMakeLists.txt  Makefile  demo_huawei.c
demo/demo_hw_bcs/: CMakeLists.txt  Makefile  demo_hw_bcs.c
demo/demo_key/: ethereum_client.key  fabric_client.cert  fabric_client.key  fiscobcos_client.key  platone_client.key
demo/demo_key/tlsca/: tlsca.example.com-cert.pem  tlsca.org1.example.com-cert.pem  tlsca.org2.example.com-cert.pem
demo/demo_platon/: CMakeLists.txt  Makefile  demo_platon_transfer.c  demo_platon_transfer_and_callContract.c  helloworld.c  helloworld.h
demo/demo_platon/demo_contract/: Makefile  helloworld.json
demo/demo_platone/: CMakeLists.txt  Makefile  demo_platone_mycontract.c
demo/demo_platone/demo_contract/: Makefile  my_contract.cpp.abi.json
demo/demo_platone/demo_contract/Solidity/: CMakeLists.txt  Makefile
demo/demo_platone/demo_contract/WASM/: Makefile
demo/demo_quorum/: CMakeLists.txt  Makefile  demo_quorum_private_storeread.c  demo_quorum_public_storeread.c  demo_quorum_storeread.c  demo_quorum_transfer.c
demo/demo_quorum/demo_contract/: CMakeLists.txt  Makefile
demo/demo_venachain/: CMakeLists.txt  Makefile  demo_venachain_mycontract.c
demo/demo_venachain/demo_contract/: Makefile
sdk/: CMakeLists.txt  Makefile
sdk/account/: Makefile
sdk/account/ethereum/: api_ethereum.c  network_ethereum.h
sdk/account/hlfabric/: Makefile
sdk/cJSON/: Makefile
sdk/include/: boatinternal.h
sdk/keypair/: CMakeLists.txt  Makefile  boatkeypair.c
sdk/network/: CMakeLists.txt  Makefile
sdk/network/chainmaker/: CMakeLists.txt  Makefile  chainmaker_network.pb-c.c  chainmaker_network.pb-c.h  chainmaker_network.proto  network_chainmaker.c  network_chainmaker.h
sdk/network/cita/: CMakeLists.txt  Makefile  cita_network.pb-c.c  cita_network.pb-c.h  cita_network.proto  network_cita.c  network_cita.h
sdk/network/ethereum/: CMakeLists.txt  Makefile  api_ethereum.c  network_ethereum.c  network_ethereum.h
sdk/network/fiscobcos/: CMakeLists.txt  Makefile  network_fiscobcos.c  network_fiscobcos.h
sdk/network/hlfabric/: CMakeLists.txt  Makefile  fabric_network.pb-c.c  fabric_network.pb-c.h  fabric_network.proto  network_hlfabric.c  network_hlfabric.h
sdk/network/hwbcs/: CMakeLists.txt  Makefile  hwbcs_network.pb-c.c  hwbcs_network.pb-c.h  hwbcs_network.proto  network_hwbcs.c  network_hwbcs.h
sdk/network/platon/: CMakeLists.txt  Makefile  network_platon.c  network_platon.h
sdk/network/platone/: CMakeLists.txt  Makefile  network_platone.c  network_platone.h
sdk/network/quorum/: CMakeLists.txt  Makefile  network_quorum.c  network_quorum.h
sdk/network/venachain/: CMakeLists.txt  Makefile  network_venachain.c  network_venachain.h
sdk/platform/: boatplatform.c  boatplatform_internal.c
sdk/protocol/: CMakeLists.txt  Makefile  boatethereum.c  boatethereum.h  boatplatone.c  boatplatone.h  boatprotocols.h
sdk/protocol/boatchainmaker/: CMakeLists.txt  Makefile  boatchainmaker.c  boatchainmaker.h
sdk/protocol/boatchainmaker_v1/: Makefile  boatchainmaker.c  boatchainmaker.h
sdk/protocol/boatchainmaker_v2/: Makefile  boatchainmaker.c
sdk/protocol/boatcita/: CMakeLists.txt  Makefile  boatcita.c  boatcita.h
sdk/protocol/boatethereum/: CMakeLists.txt  Makefile  boatethereum.c  boatethereum.h
sdk/protocol/boatfiscobcos/: CMakeLists.txt  Makefile  boatfiscobcos.c  boatfiscobcos.h
sdk/protocol/boathlfabric/: CMakeLists.txt  Makefile  boathlfabric.c  boathlfabric.h  boathlfabric_discover.c  boathlfabric_discovery.c
sdk/protocol/boathlhuawei/: CMakeLists.txt  Makefile  boathlhuawei.c  boathlhuawei.h  message.pb-c.c  transaction.pb-c-huawei.c  transaction.pb-c-huawei.h
sdk/protocol/boathwbcs/: CMakeLists.txt  Makefile  boathwbcs.c  boathwbcs.h
sdk/protocol/boatplaton/: CMakeLists.txt  Makefile  boatplaton.c  boatplaton.h  boatplatonbech32.c
sdk/protocol/boatplatone/: CMakeLists.txt  Makefile  boatplatone.c  boatplatone.h
sdk/protocol/boatquorum/: CMakeLists.txt  Makefile  boatquorum.c  boatquorum.h
sdk/protocol/boatvenachain/: CMakeLists.txt  Makefile  boatvenachain.c  boatvenachain.h
sdk/protocol/common/: CMakeLists.txt  Makefile  http2intf.c  http2intf.h  web3intf.c  web3intf.h
sdk/rlp/: CMakeLists.txt  Makefile  boatrlp.c
sdk/rpc/: Makefile  curlport.c  curlport.h  rpcintf.c  rpcintf.h  rpcport.h
sdk/utilities/: CMakeLists.txt  Makefile  base64.c  base64.h  boatutility.c
sdk/wallet/: CMakeLists.txt  Makefile  api_chainmaker.c  api_chainmaker_v1.c  api_chainmaker_v2.c  api_cita.c  api_ethereum.c  api_fiscobcos.c  api_hlfabric.c  api_hlfabric_discover.c  api_hlhuawei.c  api_hw_bcs.c  api_platon.c  api_platone.c  api_quorum.c  api_venachain.c  boatversion.c  boatwallet.c
(+629 files in other folders)
